# esp-bme68x-bsec

./: .gitmodules  CMakeLists.txt
bsec/: README.md  bsec_integration.c  bsec_integration.h
